kafka tests are implemented